--- a/7.2-SImulation.vs.formulas/lesson.yaml
+++ b/7.2-SImulation.vs.formulas/lesson.yaml
@@ -24,7 +24,7 @@
 - Class: cmd_question
   Output: Let's first create a bootstrap distribution for the mean number of hot dogs needed to win the contest (in this case, our parameter is the "population mean" or, the average number of hot dogs need to win if you looked at ALL past and future years of the contest). Try it now, enter - Bootdat<-do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}.
   CorrectAnswer: Bootdat<-do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}
-  AnswerTests: omnitest(correctExpr=c('Bootdat<-do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}', 'Bootdat=do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}'), strict = FALSE)
+  AnswerTests: any_of_exprs('Bootdat<-do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}', 'Bootdat=do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}')
   Hint: Type Bootdat<-do(1000)*{mean(~HotDogs, data=resample(HotDogs2019))}
 
 - Class: cmd_question
@@ -36,7 +36,7 @@
 - Class: cmd_question
   Output: Now, let's get a confidence interval using the qdata functon - bootCI<-qdata(~result, p=c(.025,0.975), data=Bootdat)
   CorrectAnswer: bootCI<-qdata(~result, p=c(.025,0.975), data=Bootdat)
-  AnswerTests: omnitest(correctExpr=c('bootCI<-qdata(~result, p=c(.025,0.975), data=Bootdat)', 'bootCI=qdata(~result, p=c(.025,0.975), data=Bootdat)'), strict = FALSE)
+  AnswerTests: any_of_exprs('bootCI<-qdata(~result, p=c(.025,0.975), data=Bootdat)', 'bootCI=qdata(~result, p=c(.025,0.975), data=Bootdat)')
   Hint: Enter - bootCI<-qdata(~result, p=c(.025,0.975), data=Bootdat)
 
 - Class: cmd_question
@@ -51,13 +51,13 @@
 - Class: cmd_question
   Output: Now, let's try it again using the explicit formula for calculating a confidence interval for a mean. This can be found on your formula sheet, but here it is - sample mean +/- t* x SE, where SE = s / sqrt(n). Note, s is the standard deviation of the data. So, to calculate our interval, we need to first calculate the SE. Let's calculate and store this value by entering the following - formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18) (since there are 18 cases in the dataframe).
   CorrectAnswer: formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18)
-  AnswerTests: omnitest(correctExpr=c('formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18)', 'formSE = sd(~HotDogs, data=HotDogs2019)/sqrt(18)'), strict = FALSE)
+  AnswerTests: any_of_exprs('formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18)', 'formSE = sd(~HotDogs, data=HotDogs2019)/sqrt(18)')
   Hint: Enter - formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18)
 
 - Class: cmd_question
   Output: We need two more things to make a confidence interval. We need the mean number of hotdogs in our sample data and the t* for a 95% confidence interval. Let's get the mean first - call it formMean (for formula mean), formMean<-mean(~HotDogs, data=HotDogs2019).
   CorrectAnswer: formMean <- mean(~HotDogs, data=HotDogs2019)
-  AnswerTests: omnitest(correctExpr=c('formMean <- mean(~HotDogs, data=HotDogs2019)', 'formMean = mean(~HotDogs, data=HotDogs2019)'), strict = FALSE)
+  AnswerTests: any_of_exprs('formMean <- mean(~HotDogs, data=HotDogs2019)', 'formMean = mean(~HotDogs, data=HotDogs2019)')
   Hint: Enter - formMean <- mean(~HotDogs, data=HotDogs2019)
 
 - Class: exact_question
@@ -69,13 +69,13 @@
 - Class: cmd_question
   Output: Exactly. So, we can get t* (and store it in an object called tstars) by using the xqt function as follows - tstars <- xqt(p=c(.025, .975), df=17)
   CorrectAnswer: tstars <- xqt(p=c(.025, .975), df=17)
-  AnswerTests: omnitest(correctExpr=c('tstars <- xqt(p=c(.025, .975), df=17)', 'tstars = xqt(p=c(.025, .975), df=17)'), strict = FALSE)
+  AnswerTests: any_of_exprs('tstars <- xqt(p=c(.025, .975), df=17)', 'tstars = xqt(p=c(.025, .975), df=17)')
   Hint: Enter -  tstars <- xqt(p=c(.025, .975), df=17)
 
 - Class: cmd_question
   Output: Let's put it all together to see our formula-produced confidence interval. Try it out now - formCI <- formMean + tstars*formSE
   CorrectAnswer: formCI <- formMean + tstars*formSE
-  AnswerTests: omnitest(correctExpr=c('formCI <- formMean + tstars*formSE', 'formCI = formMean + tstars*formSE'), strict = FALSE)
+  AnswerTests: any_of_exprs('formCI <- formMean + tstars*formSE', 'formCI = formMean + tstars*formSE')
   Hint: Enter - formCI <- formMean + tstars*formSE
 
 - Class: cmd_question
