--- a/8.1-Chi.sq.tests/lesson.yaml
+++ b/8.1-Chi.sq.tests/lesson.yaml
@@ -25,7 +25,7 @@
 - Class: cmd_question
   Output: We're looking at two categorical variables here. Since we want to know if the treatments differ in their rates of success, we will use a chi-square test for association. First, let's tally the relapses for each treatment. Type -  (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion")).  Note, the extra "( )" around the expression will print the tally AND save it as an object.
   CorrectAnswer: (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion"))
-  AnswerTests: omnitest(correctExpr=c('(CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format=\"proportion\"))','(CocaineTab = tally(~Relapse|Drug, data=CocaineTreatment, format=\"proportion\"))'), strict = FALSE)
+  AnswerTests: any_of_exprs('(CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format=\"proportion\"))','(CocaineTab = tally(~Relapse|Drug, data=CocaineTreatment, format=\"proportion\"))')
   Hint: Enter - (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion")), note, make sure you have the extra "(" and ")" around the expression.
  
 
