--- a/5.3-Bootstraps.vs.randomization/lesson.yaml
+++ b/5.3-Bootstraps.vs.randomization/lesson.yaml
@@ -77,7 +77,7 @@
   Hint: Use this distribution to calculate p-values!
   
 - Class: text
-  Output: Yes, a key difference between bootstrap distributions and randomization distributions is that the latter explore a range of values for our statistic in the case *where the null hypothesis is true*.
+  Output: Yes, a key difference between bootstrap distributions and randomization distributions is that the latter explores a range of values for our statistic in the case *where the null hypothesis is true*.
   
 - Class: mult_question
   Output: Good work! You've completed Pre-Lab 5.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
